2014-12-30  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* COPYING: Add copyright & license for the packaging itself.

2014-12-30  Theppitak Karoonboonyanan <theppitak@gmail.com>

	* AUTHORS: Update my e-mail address.

2014-04-24  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Set TTF Prefered Family of all fonts to "Arundina".

	This makes installers like gnome-software group the fonts together
	rather than showing them as separate entries.

	* arundina/*.sfd:
	  - Set TTF Prefered Family to "Arundina".

	Bug report by Richard Huges:
	https://groups.google.com/forum/#!topic/thai-linux-foss-devel/eKAE8bVG9-s

2013-02-15  Theppitak Karoonboonyanan <thep@linux.thai.net>

	Resurrect dist-ctan make target.

	* Makefile.am:
	  - Revert revision 82 which removed dist-ctan target.
	    CTAN now requires source and TDS to be uploaded as a single ZIP
	    again.

2013-01-28  Theppitak Karoonboonyanan <thep@linux.thai.net>

	Switch to XZ tarball compression.

	* configure.ac:
	  - Specify "dist-xz no-dist-gzip" options to AM_INIT_AUTOMAKE.
	  - Also add "-Wno-portability" to skip warnings on GNU make specific
	    features.

2013-01-28  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2012-02-15  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* NEWS, configure.ac:
	  === Version 0.2.0 ===

2012-02-15  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* README: Update project page URL.

2012-02-14  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* latex/examples/testdoc.tex: Fix a minor typo in Pali sample.

2012-02-13  Theppitak Karoonboonyanan <thep@linux.thai.net>

	Move font encodings & ligkern stuffs back to font package,
	to allow font-specific ligkern rules.

	* +latex/ltharun.enc +latex/thailigs.enc +latex/thai-dummy.afm:
	  - Add enc & ligkern stuff from thailatex project.
	* latex/Makefile.am:
	  - Add new files to EXTRA_DIST.
	  - Install the enc file.
	* latex/texfont.mk.am: